[gd_scene load_steps=2 format=3 uid="uid://wbo6igqpot0g"]

[ext_resource type="Script" uid="uid://sn7jy5e8r2fh" path="res://hurt_box.gd" id="1_jdrw3"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_jdrw3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableHurtBoxTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisableHurtBoxTimer" to="." method="_on_disable_timer_timeout"]
